<resources>
    <string name="app_name">Loliapp</string>

    <string name="hello_world">Ingresa los siguientes datos</string>
    <string name="Nombre">Nombre</string>
    <string name="Edad">Edad</string>
    <string name="Fecha_nac">Fecha nac.</string>
    <string name="Sexo">Sexo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
