<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/muno"
        android:textColor="@color/Accent"
        android:background="#F5F5F5"
        android:id="@+id/textView" />
    <TextView android:text="@string/Nombre" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/muno"
        android:textColor="@color/Accent"
        android:background="#F5F5F5"
        android:id="@+id/nombre"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/Edad" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/muno"
        android:textColor="@color/Accent"
        android:background="#F5F5F5"
        android:id="@+id/Edad"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />
    <TextView android:text="@string/Fecha_nac" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/muno"
        android:textColor="@color/Accent"
        android:background="#F5F5F5"
        android:id="@+id/Fecha_nac"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true" />
    <TextView android:text="@string/Sexo" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/muno"
        android:textColor="@color/Accent"
        android:background="#F5F5F5"
        android:id="@+id/Sexo"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignEnd="@+id/Edad"
        android:layout_marginTop="45dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"

        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/nombre" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"

        android:textStyle="bold"
        android:layout_alignTop="@+id/Edad"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/nombre" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="siguiente"
        android:id="@+id/button"
        android:elevation="4dp"
        android:onClick="onclic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radioGroup"
        android:layout_marginTop="186dp"
        android:layout_below="@+id/Fecha_nac"
        android:layout_alignStart="@+id/editText1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            android:id="@+id/r1"
            android:checked="false"
            android:layout_alignTop="@+id/radioButton"
            android:layout_centerHorizontal="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="H"
            android:id="@+id/r2"
            android:layout_marginBottom="33dp"
            android:checked="false"
            android:layout_above="@+id/button"
            android:layout_toStartOf="@+id/button" />


    </RadioGroup>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_above="@+id/Sexo"
        android:layout_alignStart="@+id/textView"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/Fecha_nac" />


</RelativeLayout>
